# Periodic-Table-Info

./: .deepsource.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Copyright.txt  ISSUE_TEMPLATE.md  Information_Copyright.txt  LICENSE  LICENSE.md  PLANNING.md  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  __init__.py  __main__.py  docker-compose.yml  elements.py  index.html  main.py  params.json  print.py  pyproject.toml  setup.cfg  setup.py  setup_information.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md
.github/agents/: api-agent.md  docs-agent.md  lint-agent.md  test-agent.md
.github/workflows/: codeql-analysis.yml  docker-publish.yml  push-to-pypi.yml  pylint.yml  pytest.yml  test.yml
Other Companies/: Rail Line Plans and Train Cars.docx
docs/: README.md  USAGE.md
docs/legal/: CLA_ENTITY.md  CLA_INDIVIDUAL.md  EULA.md  INFORMATION COPYRIGHT.md  PRIVACY.md  TERMS.md
tests/: test___main__.py  test_elements.py  test_main.py  test_print.py
