[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "Periodic-Table-Info"
version = "0.3.0"
authors = [
  { name= "willtheorangeguy" },
]
description = "Print all the elements in the Periodic Table of the Elements, with an interactive prompt to learn more."
readme = "README.md"
license = { file="LICENSE.md" }
requires-python = ">=3.9"
classifiers = [
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Topic :: Education',
]

[project.urls]
"Homepage" = "https://github.com/Dog-Face-Development/Periodic-Table-Info"
"Bug Tracker" = "https://github.com/Dog-Face-Development/Periodic-Table-Info/issues"